renamed css variables, reorganized js functions by module

--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -78,7 +78,7 @@
         </div>
 
         <div id="block-content">
-            <section id="ctr1-directory" class="content-ctr1">
+            <section id="ctr1-directory" class="content-ctr1 active">
                 <h2>Directory</h2>
 
                 <hr>
@@ -170,7 +170,7 @@
                 </div>
             </section>
 
-            <section id="ctr1-editor" class="content-ctr1 active">
+            <section id="ctr1-editor" class="content-ctr1">
                 <h2>Editor</h2>
 
                 <hr>
@@ -182,10 +182,10 @@
                         </video>
 
                         <div id="ctr-playback">
-                            <!-- <input id="slider-playback" type="range"> -->
                              <div id="slider-playback">
-                                <div id="track-playback"></div>
-                                <div id="thumb-playback"></div>
+                                <div id="track-playback">
+                                    <div id="thumb-playback"></div>
+                                </div>
                              </div>
 
                             <div id="bar-playback">
@@ -224,14 +224,11 @@
                         </div>
                     </div>
 
-                    <!-- <div id="ctr-timeline">
-                        <svg id="marker-timeline"></svg>
-                        <input id="slider-timeline" type="range">
-                    </div> -->
-
                     <div id="slider-timeline">
-                        <svg id="track-timeline"></svg>
-                        <div id="thumb-timeline"></div>
+                        <svg id="overlay-timeline"></svg>
+                        <div id="track-timeline">
+                            <div id="thumb-timeline"></div>
+                        </div>
                     </div>
                 </div>
             </section>
