modularized electron js, added loading screen

--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -30,6 +30,14 @@
         </div>
     </template>
 
+    <div id="cover" class="active">
+        <svg>
+            <use href="../assets/svg/capcha.svg#capcha"></use>
+        </svg>
+
+        <span>CapCha</span>
+    </div>
+
     <div id="bar-title">
         <p id="label-version">CC-0.1.1</p>
 
