added error messaging, naming cleanup, css cleanup

--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -36,6 +36,8 @@
         </svg>
 
         <span>CapCha</span>
+
+        <p id="label-initialization-status">Loading...</p>
     </div>
 
     <div id="bar-title">
@@ -104,6 +106,7 @@
 
                 <span id="label-resume-auto-record">RESUME AUTO RECORD</span>
             </nav>
+
             <button id="btn-nav-toggle">
                 <svg>
                     <use href="../assets/svg/arrow-forward-ios.svg#arrow-forward-ios"></use>
@@ -112,6 +115,8 @@
         </div>
 
         <div id="block-content">
+            <p id="label-general-status">Loading...</p>
+
             <section id="section-directories" class="content-section active">
                 <h2>Directories</h2>
 
@@ -195,7 +200,7 @@
                             <source src="" type="video/mp4">
                         </video>
 
-                        <svg id="status-play-pause">
+                        <svg id="icon-play-pause-status">
                             <use href="../assets/svg/play-circle.svg#play-circle"></use>
                         </svg>
 
