reorganized css naming

--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -226,16 +226,16 @@
 
                                 <input id="slider-volume" class="playback-input" type="range" min="0" max="1" value="0" step="0.01">
 
-                                <div id="ctr-video-time">
-                                    <span id="label-current-video-time" class="video-time-label">88:88</span>
-                                    <span id="label-total-video-time" class="video-time-label">/88:88</span>
+                                <div id="ctr-time">
+                                    <span id="label-current-time" class="time-label">88:88</span>
+                                    <span id="label-total-time" class="time-label">/88:88</span>
                                 </div>
 
                                 <input id="slider-speed" class="playback-input" type="range" min="-2" max="4" value="1" step="1">
 
                                 <button id="btn-speed" class="playback-btn">
                                     <span id="label-current-speed" class="speed-label">1</span>
-                                    <span id="label-multiplier" class="speed-label">X</span>
+                                    <span id="label-speed-multiplier" class="speed-label">X</span>
                                 </button>
                                 
                                 <button id="btn-fullscreen" class="playback-btn">
