directory button and video player qol

--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -16,7 +16,10 @@
                 <span class="video-duration-label"></span>
             </div>
 
-            <h4 class="video-game-age-label"></h4>
+            <div class="video-label-ctr">
+                <span class="video-game-label"></span>
+                <span class="video-age-label"></span>
+            </div>
 
             <span class="video-name-label"></span>
 
@@ -97,7 +100,7 @@
                     <span class="nav-label">Settings</span>
                 </button>
     
-                <div id="ctr-current-recording">
+                <div id="label-ctr-current-recording">
                     <span id="time-label-current-recording">88:88</span>
                     <span id="game-label-current-recording">GAME</span>
                 </div>
@@ -142,13 +145,16 @@
                             </button>
 
                             <div id="gallery-captures" class="directory-gallery">
-                                <div class="video-preview-ctr" data-src="">
+                                <!-- <div class="video-preview-ctr" data-src="">
                                     <div class="video-thumbnail-ctr">
                                         <img class="video-thumbnail" src="" alt="">
                                         <span class="video-duration-label">88:88</span>
                                     </div>
 
-                                    <h4 class="video-game-age-label">Example Text</h4>
+                                    <div class="video-label-ctr">
+                                        <span class="video-game-label">Example game with long name</span>
+                                        <span class="video-age-label">&nbsp;- 999d+ ago</span>
+                                    </div>
 
                                     <span class="video-name-label">Example Text</span>
 
@@ -165,7 +171,7 @@
                                             </svg>
                                         </button>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
 
                             <button id="right-btn-captures" class="directory-btn">
@@ -238,7 +244,7 @@
 
                                 <input id="slider-volume" class="playback-slider" type="range" min="0" max="1" value="0" step="0.01">
 
-                                <div id="ctr-current-video">
+                                <div id="label-ctr-current-video">
                                     <span id="time-label-current-video" class="current-video-label">88:88</span>
                                     <span id="duration-label-current-video" class="current-video-label">/88:88</span>
                                 </div>
