fixed setting icons, variable names

--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -321,7 +321,7 @@
                                 <label class="setting-toggle-switch">
                                     <input class="setting-toggle-field" type="checkbox" name="darkMode">
                                     <svg class="setting-toggle-icon">
-                                        <use href="../assets/svg/autofps-select.svg#autofps-select"></use>
+                                        <use href="../assets/svg/disabled.svg#disabled"></use>
                                     </svg>
                                 </label>
                             </div>
@@ -507,7 +507,7 @@
                                 <label class="setting-toggle-switch">
                                     <input class="setting-toggle-field" type="checkbox" name="autoRecord">
                                     <svg class="setting-toggle-icon">
-                                        <use href="../assets/svg/autofps-select.svg#autofps-select"></use>
+                                        <use href="../assets/svg/disabled.svg#disabled"></use>
                                     </svg>
                                 </label>
                             </div>
