added clips bar functionality, fixed resizing issues

--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -126,7 +126,7 @@
         <div id="block-content">
             <p id="status-label-general">Loading...</p>
 
-            <section id="section-directories" class="content-section">
+            <section id="section-directories" class="content-section active">
                 <h2 class="content-label">Directories</h2>
 
                 <hr class="content-divider">
@@ -207,7 +207,7 @@
                 </div>
             </section>
 
-            <section id="section-editor" class="content-section active">
+            <section id="section-editor" class="content-section">
                 <h2 class="content-label">Editor</h2>
 
                 <hr class="content-divider">
@@ -294,6 +294,8 @@
                         <div id="track-timeline">
                             <svg id="overlay-timeline" xmlns="http://www.w3.org/2000/svg"></svg>
                             <div id="thumb-timeline"></div>
+                            <div id="left-thumb-clip" class="clip-thumb"></div>
+                            <div id="right-thumb-clip" class="clip-thumb"></div>
                         </div>
                     </div>
 
