--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -126,7 +126,7 @@
         <div id="block-content">
             <p id="status-label-general">Loading...</p>
 
-            <section id="section-directories" class="content-section active">
+            <section id="section-directories" class="content-section">
                 <h2 class="content-label">Directories</h2>
 
                 <hr class="content-divider">
@@ -303,19 +303,23 @@
                         <svg id="icon-clip">
                             <use href="../assets/svg/clip.svg#clip"></use>
                         </svg>
-                        <div id="bar-clip">
+                        
+                        <div id="bar-clip" class="active">
                             <div class="clip-setting-pill">
-                                <h4 class="clip-setting-label">Export Resolution</h4>
-                                <select class="clip-setting-field">
-                                    <option value="5">5 GB</option>
-                                    <option value="10">10 GB</option>
-                                    <option value="20">20 GB</option>
-                                </select>
+                                <h4 class="clip-setting-label">Clip Width</h4>
+
+                                <input class="clip-setting-field" type="text" name="clipsWidth">
                             </div>
 
                             <div class="clip-setting-pill">
-                                <h4 class="clip-setting-label">Export Format</h4>
-                                <select class="clip-setting-field">
+                                <h4 class="clip-setting-label">Clip Height</h4>
+
+                                <input class="clip-setting-field" type="text" name="clipsHeight">
+                            </div>
+
+                            <div class="clip-setting-pill">
+                                <h4 class="clip-setting-label">Clip Format</h4>
+                                <select class="clip-setting-field" name="clipsFormat">
                                     <option value="mp4">.mp4</option>
                                     <option value="mkv">.mkv</option>
                                 </select>
@@ -346,7 +350,7 @@
                 </div>
             </section>
 
-            <section id="section-settings" class="content-section">
+            <section id="section-settings" class="content-section active">
                 <h2 class="content-label">Settings</h2>
 
                 <hr class="content-divider">
@@ -378,12 +382,12 @@
                     </div>
 
                     <div class="section-ctr2">
-                        <h3 class="section-label">Files</h3>
+                        <h3 class="section-label">Captures</h3>
 
                         <hr class="section-divider">
 
                         <div class="setting-ctr">
-                            <h4 class="setting-label">Captures Save Location</h4>
+                            <h4 class="setting-label">Save Location</h4>
 
                             <div class="setting-pill">
                                 <svg class="setting-icon">
@@ -397,7 +401,7 @@
                         </div>
 
                         <div class="setting-ctr">
-                            <h4 class="setting-label">Captures Storage Limit</h4>
+                            <h4 class="setting-label">Storage Limit</h4>
 
                             <div class="setting-pill">
                                 <svg class="setting-icon">
@@ -416,61 +420,24 @@
                                 </select>
                             </div>
 
-                            <p class="setting-description">When storage limit is exceeded, the oldest videos will be deleted automatically.</p>
+                            <p class="setting-description">When storage limit is exceeded, the oldest captures will be deleted automatically.</p>
                         </div>
 
                         <div class="setting-ctr">
-                            <h4 class="setting-label">Clips Save Location</h4>
-
-                            <div class="setting-pill">
-                                <svg class="setting-icon">
-                                    <use href="../assets/svg/folder-open-solid.svg#folder-open-solid"></use>
-                                </svg>
-
-                                <input class="setting-field" type="text" name="clipsPath" readonly>
-                            </div>
-
-                            <p class="setting-description">Your clips will be saved in this location.</p>
-                        </div>
-
-                        <div class="setting-ctr">
-                            <h4 class="setting-label">Clips Storage Limit</h4>
-
-                            <div class="setting-pill">
-                                <svg class="setting-icon">
-                                    <use href="../assets/svg/storage.svg#storage"></use>
-                                </svg>
-
-                                <select class="setting-field" name="clipsLimit">
-                                    <option value="5">5 GB</option>
-                                    <option value="10">10 GB</option>
-                                    <option value="20">20 GB</option>
-                                    <option value="50">50 GB</option>
-                                    <option value="100">100 GB</option>
-                                    <option value="200">200 GB</option>
-                                    <option value="500">500 GB</option>
-                                    <option value="0">No Limit</option>
-                                </select>
-                            </div>
-
-                            <p class="setting-description">When storage limit is exceeded, the oldest videos will be deleted automatically.</p>
-                        </div>
-
-                        <div class="setting-ctr">
-                            <h4 class="setting-label">File Extension</h4>
+                            <h4 class="setting-label">Format</h4>
 
                             <div class="setting-pill">
                                 <svg class="setting-icon">
                                     <use href="../assets/svg/draft.svg#draft"></use>
                                 </svg>
 
-                                <select class="setting-field" name="format">
+                                <select class="setting-field" name="capturesFormat">
                                     <option value="mp4">.mp4</option>
                                     <option value="mkv">.mkv</option>
                                 </select>
                             </div>
 
-                            <p class="setting-description">Your videos will be saved with this extension.</p>
+                            <p class="setting-description">Your captures will be saved with this extension.</p>
                         </div>
 
                         <div class="setting-ctr">
@@ -481,7 +448,7 @@
                                     <use href="../assets/svg/compress.svg#compress"></use>
                                 </svg>
 
-                                <select class="setting-field" name="encoder">
+                                <select class="setting-field" name="capturesEncoder">
                                     <option value="obs_nvenc_h264_tex">nvenc h.264</option>
                                     <option value="obs_nvenc_hevc_tex">nvenc hevc</option>
                                     <option value="obs_x264">x264</option>
@@ -489,29 +456,6 @@
                             </div>
 
                             <p class="setting-description">Something something CPU vs GPU...</p>
-                        </div>
-                    </div>
-                    
-                    <div class="section-ctr2">
-                        <h3 class="section-label">Video</h3>
-
-                        <hr class="section-divider">
-
-                        <div class="setting-ctr">
-                            <h4 class="setting-label">Recording Display</h4>
-
-                            <div class="setting-pill">
-                                <svg class="setting-icon">
-                                    <use href="../assets/svg/storage.svg#storage"></use>
-                                </svg>
-
-                                <select class="setting-field" name="recordingDisplay">
-                                    <option value="temp1">temp1</option>
-                                    <option value="temp2">temp2</option>
-                                </select>
-                            </div>
-
-                            <p class="setting-description">Which display will be captured?</p>
                         </div>
 
                         <div class="settings-group-ctr">
@@ -523,7 +467,7 @@
                                         <use href="../assets/svg/width.svg#width"></use>
                                     </svg>
 
-                                    <input class="setting-field" type="text" name="recordingWidth">
+                                    <input class="setting-field" type="text" name="capturesWidth">
                                 </div>
                             </div>   
                             <div class="setting-ctr">
@@ -534,9 +478,26 @@
                                         <use href="../assets/svg/height.svg#height"></use>
                                     </svg>
 
-                                    <input class="setting-field" type="text" name="recordingHeight">
+                                    <input class="setting-field" type="text" name="capturesHeight">
                                 </div>
                             </div>
+                        </div>
+
+                        <div class="setting-ctr">
+                            <h4 class="setting-label">Display</h4>
+
+                            <div class="setting-pill">
+                                <svg class="setting-icon">
+                                    <use href="../assets/svg/storage.svg#storage"></use>
+                                </svg>
+
+                                <select class="setting-field" name="capturesDisplay">
+                                    <option value="temp1">temp1</option>
+                                    <option value="temp2">temp2</option>
+                                </select>
+                            </div>
+
+                            <p class="setting-description">Which display will be captured?</p>
                         </div>
 
                         <div class="settings-group-ctr">
@@ -548,7 +509,7 @@
                                         <use href="../assets/svg/autofps-select.svg#autofps-select"></use>
                                     </svg>
 
-                                    <select class="setting-field" name="framerate">
+                                    <select class="setting-field" name="capturesFramerate">
                                         <option value="10">10 fps</option>
                                         <option value="20">20 fps</option>
                                         <option value="24">24 fps</option>
@@ -566,7 +527,7 @@
                                         <use href="../assets/svg/bar-chart-4-bars.svg#bar-chart-4-bars"></use>
                                     </svg>
 
-                                    <select class="setting-field" name="bitrate">
+                                    <select class="setting-field" name="capturesBitrate">
                                         <option value="3000">3 Mbps</option>
                                         <option value="5000">5 Mbps</option>
                                         <option value="10000">10 Mbps</option>
@@ -597,6 +558,91 @@
                             </div>
 
                             <p class="setting-description">Automatically record when gameplay is detected.</p>
+                        </div>
+                    </div>
+
+                    <div class="section-ctr2">
+                        <h3 class="section-label">Clips</h3>
+
+                        <hr class="section-divider">
+
+                        <div class="setting-ctr">
+                            <h4 class="setting-label">Save Location</h4>
+
+                            <div class="setting-pill">
+                                <svg class="setting-icon">
+                                    <use href="../assets/svg/folder-open-solid.svg#folder-open-solid"></use>
+                                </svg>
+
+                                <input class="setting-field" type="text" name="clipsPath" readonly>
+                            </div>
+
+                            <p class="setting-description">Your clips will be saved in this location.</p>
+                        </div>
+
+                        <div class="setting-ctr">
+                            <h4 class="setting-label">Storage Limit</h4>
+
+                            <div class="setting-pill">
+                                <svg class="setting-icon">
+                                    <use href="../assets/svg/storage.svg#storage"></use>
+                                </svg>
+
+                                <select class="setting-field" name="clipsLimit">
+                                    <option value="5">5 GB</option>
+                                    <option value="10">10 GB</option>
+                                    <option value="20">20 GB</option>
+                                    <option value="50">50 GB</option>
+                                    <option value="100">100 GB</option>
+                                    <option value="200">200 GB</option>
+                                    <option value="500">500 GB</option>
+                                    <option value="0">No Limit</option>
+                                </select>
+                            </div>
+
+                            <p class="setting-description">When storage limit is exceeded, the oldest videos will be deleted automatically.</p>
+                        </div>
+
+                        <div class="setting-ctr">
+                            <h4 class="setting-label">Format</h4>
+
+                            <div class="setting-pill">
+                                <svg class="setting-icon">
+                                    <use href="../assets/svg/draft.svg#draft"></use>
+                                </svg>
+
+                                <select class="setting-field" name="clipsFormat">
+                                    <option value="mp4">.mp4</option>
+                                    <option value="mkv">.mkv</option>
+                                </select>
+                            </div>
+
+                            <p class="setting-description">Your videos will be saved with this extension.</p>
+                        </div>
+
+                        <div class="settings-group-ctr">
+                            <div class="setting-ctr">
+                                <h4 class="setting-label">Width</h4>
+
+                                <div class="setting-pill">
+                                    <svg class="setting-icon">
+                                        <use href="../assets/svg/width.svg#width"></use>
+                                    </svg>
+
+                                    <input class="setting-field" type="text" name="clipsWidth">
+                                </div>
+                            </div>   
+                            <div class="setting-ctr">
+                                <h4 class="setting-label">Height</h4>
+
+                                <div class="setting-pill">
+                                    <svg class="setting-icon">
+                                        <use href="../assets/svg/height.svg#height"></use>
+                                    </svg>
+
+                                    <input class="setting-field" type="text" name="clipsHeight">
+                                </div>
+                            </div>
                         </div>
                     </div>
 
