completed speaker and mic volume sliders

--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -668,6 +668,27 @@
                             </div>
 
                             <div class="setting-ctr">
+                                <h4 class="setting-label">Volume</h4>
+
+                                <div class="setting-pill">
+                                    <svg class="setting-icon">
+                                        <use href="../assets/svg/width.svg#width"></use>
+                                    </svg>
+
+                                    <div class="setting-slider-ctr">
+                                        <div id="slider-speaker-volume" class="setting-slider">
+                                            <div id="track-speaker-volume" class="setting-track">
+                                                <div id="overlay-speaker-volume" class="setting-overlay"></div>
+                                                <div id="thumb-speaker-volume" class="setting-thumb"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="settings-group-ctr">
+                            <div class="setting-ctr">
                                 <h4 class="setting-label">Microphone</h4>
 
                                 <div class="setting-pill">
@@ -682,6 +703,27 @@
                                 </div>
                             </div>
 
+                            <div class="setting-ctr">
+                                <h4 class="setting-label">Volume</h4>
+
+                                <div class="setting-pill">
+                                    <svg class="setting-icon">
+                                        <use href="../assets/svg/width.svg#width"></use>
+                                    </svg>
+
+                                    <div class="setting-slider-ctr">
+                                        <div id="slider-microphone-volume" class="setting-slider">
+                                            <div id="track-microphone-volume" class="setting-track">
+                                                <div id="overlay-microphone-volume" class="setting-overlay"></div>
+                                                <div id="thumb-microphone-volume" class="setting-thumb"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="settings-group-ctr">
                             <div class="setting-ctr">
                                 <h4 class="setting-label">Webcam</h4>
 
