added display, speaker, and microphone selection functionality

--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -492,8 +492,6 @@
                                 </svg>
 
                                 <select class="setting-field" name="capturesDisplay">
-                                    <option value="temp1">temp1</option>
-                                    <option value="temp2">temp2</option>
                                 </select>
                             </div>
 
@@ -661,8 +659,7 @@
                                     </svg>
 
                                     <select class="setting-field" name="speaker">
-                                        <option value="none">None</option>
-                                        <option value="default">Default</option>
+                                        <option value="Default">Default</option>
                                     </select>
                                 </div>
                             </div>
@@ -697,8 +694,7 @@
                                     </svg>
 
                                     <select class="setting-field" name="microphone">
-                                        <option value="none">None</option>
-                                        <option value="default">Default</option>
+                                        <option value="Default">Default</option>
                                     </select>
                                 </div>
                             </div>
